# cuems-engine

./: .envrc  .gitignore  .gitmodules  404.html  AGENTS.md  AudioPlayer.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cue.py  DmxCue.py  NodeControl.score  README.md  Settings.py  TODO.md  VideoPlayer.py  audio_player.py  config.py  conftest.py  device.py  diagnose_env.py  dmx.py  index.html  log.py  main.py  midi_writer.py  mkdocs.yml  mtc.py  node.py  objects.inv  osc_server.py  ossia-python_example.py  ossia_server.py  pyproject.toml  requeriments.txt  requirements.txt  settings.dtd  settings.py  settings.xml  settings.xsd  (+9 more)
.claude/: settings.json
.cursor/: mcp.json
.cursor/rules/: concise.mdc  constitution.mdc  core.mdc  no-absolute-right.mdc  refresh.mdc  request.mdc  retro.mdc  specify-rules.mdc  testing.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  gh-pages.yml  pypi-publish.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
api/: index.html
comms/: index.html
core/: index.html
cues/: index.html
debian/: changelog  control  cuems-engine-mock.install  cuems-engine-mock.postinst  cuems-engine-mock.postrm.debhelper  cuems-engine-mock.prerm  cuems-engine.postinst.debhelper  cuems-engine.prerm.debhelper  cuems-mock-videocomposer.service  debhelper-build-stamp  files  jackd-dummy.service  mock-rsync-dropin.conf  osc-control.init  osc-control.triggers  postinst  postrm  prerm  rules
debian/mock-scripts/: cuems-audioplayer  cuems-dmxplayer  jack-volume  rsync
dev/: AudioPlayerRemote.py  CuemsEngine.py  CuemsEngine_old.py  Media.py  NodeAudioPlayers.py  NodeVideoPlayers.py  Settings_old.py  VideoPlayerRemote.py  change_to_slave.sh  cuems-engine.service  cuems-node-engine.service  diagnose_env.py  diagnose_env_output.txt  display.py  editor-engine-commands.txt  network_map.xml  network_map.xsd  osc.py  ossiaServerOld.py  python-migration-plan.md  remoteOssiaOld.py  run_cpu_tests.py  test_pyossia_gmq.py  test_pyossia_midi.py  ws-server.py
dev/plans/: thread-to-async-migration.plan.md
dev/scripts/: change_to_master.sh  kill_cuems.sh  kill_cuems_processes.py  system_ports.py
dev/test_json_files/: test1.json
dev/test_xml_files/: default_mappings.xml  network_map.xml  outputs.xml  project_mappings.xml  project_settings.xml  sample_audiocue.xml  sample_dmxcue.xml  sample_videocue.xml  script_empty.xml  script_more_complex.xml  script_one_cue_in_a_cuelist.xml  script_one_simple_cue.xml  settings.xml
docs/: api.md  comms.md  core.md  cues.md  index.md  osc.md  players.md  tools.md
osc/: index.html
osc_control_stagelab.egg-info/: PKG-INFO  SOURCES.txt
players/: index.html
schemas/: outputs.xsd  project_mappings.xsd
scripts/: controller_engine.py  kill_cuems.sh  kill_cuems_processes.py  link-dev.sh  node_engine.py
search/: search_index.json
services/: cuems-engine.service  ws-server.service
specs/001-async-cue-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-action-cue-handler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-action-handler-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-gradient-engine-phase6/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gradient-osc-transport/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-cuemsdeploy-async-refactor/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/007-cuemsdeploy-sync-fallback/: data-model.md  plan.md  spec.md  tasks.md
specs/planning/: Gradient-Motion-Engine_plan.md  PYOSSIA_EVALUATION_RESULTS.md  contributor-workflow.md  integration-slow-tests-investigation.md  phase-h-osc-refactor-plan.md  scoped-osc-refactor-acceptance.md  timecode-websocket-cpu-evaluation.md
src/: AudioCue.py  AudioPlayer.py  CMLCuemsConverter.py  CTimecode.py  Cue.py  CueList.py  CueParser.py  CueProcessor.py  CuemsScript.py  DictParser.py  DmxCue.py  MtcListener.py  MtcListener_test.py  OssiaServer.py  Outputs.py  Settings.py  VideoPlayer.py  XmlBuilder.py  XmlReaderWriter.py  __init__.py  change_to_firsrun.sh  change_to_firstrun.sh  change_to_master.sh  change_to_slave.sh  cuems_nodeconf.py  cues.xml  cues.xsd  deploy.py  display.py  engine.py  nodeconf.py  ossia_server.py  reader.py  remote.py  settings.xml  test builders parsers XML.py  test copy.py  test.py  test_deploy.py  test_engine.py  (+2 more)
src/cuems/: ActionCue.py  AudioCue.py  AudioPlayer.py  CMLCuemsConverter.py  CTimecode.py  ComunicatorServices.py  ConfigManager.py  Cue.py  CueList.py  CueOutput.py  CueProcessor.py  CuemsEngine.py  CuemsInit.py  CuemsScript.py  DictParser.py  DmxCue.py  DmxPlayer.py  HWDiscovery.py  Media.py  MtcListener.py  OscServer.py  (+29 more)
tests/: README_CLEANUP.md  README_CPU_TESTS.md  conftest.py  deploy.py  engine.py  fixtures.py  helpers.py  pytest_cuems_plugin.py  reader.py  test_action_cue.py  test_all.py  test_baseengine.py  test_chain_anchoring.py  test_cleanup_demo.py  test_comms_nodehub.py  test_controller_commands.py  test_controller_engine_gradient.py  test_controller_gating.py  test_core_baseengine.py  test_core_baseengine_controller_ip.py  test_core_baseengine_status.py  test_core_signalengine.py  test_cpu_usage.py  test_cuems_deploy.py  test_cuems_deploy_integration.py  test_cues_dmx.py  test_default_mappings_valid.py  test_display_conf.py  test_effective_duration.py  test_fade_action_handler.py  test_gradient_client.py  test_libossia.py  test_libossia_oscquery.py  test_loop_fade_cue.py  test_loop_rebase.py  test_mtclistener.py  test_node_comms_ping.py  test_node_communications_gradient.py  test_node_communications_gradient_filter.py  test_node_engine.py  (+28 more)
tools/: index.html
(+165 files in other folders)
