[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cuemsengine"
version = "0.1.0rc2"
description = "Engine infraestructure of the CueMS system"
readme = "README.md"
license = "GPL-3.0"
authors = [
    "Ion Reguera <ion@stagelab.coop>",
    "Adrià Masip <adria@stagelab.coop>"
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display"
]
repository = "https://github.com/stagesoft/cuems-engine"
documentation = "https://stagesoft.github.io/cuems-engine/"
homepage = "https://github.com/stagesoft/cuems-engine#readme"

[tool.poetry.urls]
"Documentation" = "https://stagesoft.github.io/cuems-engine/"
"Source Code" = "https://github.com/stagesoft/cuems-engine"
"Bug Tracker" = "https://github.com/stagesoft/cuems-engine/issues"
"Changelog" = "https://github.com/stagesoft/cuems-engine/blob/rc_1/CHANGELOG.md"
"Product Page" = "https://formitgo.com"

[tool.poetry.dependencies]
python = "^3.11"
cuemsutils = ">=0.1.0rc10"
mido = "1.3.3"
packaging = "*"
python-rtmidi = "*"
python-osc = "1.9.3"
JACK-Client = ">=0.5.4"
# systemd-python is provided by python3-systemd Debian package (see debian/control)
# pyossia is provided by python3-pyossia Debian package (see debian/control)

[tool.poetry.group.dev.dependencies]
psutil = "*"
pytest = ">=7.0"
pytest-cov = ">=4.0"
pytest-xdist = ">=3.0"
pytest-mock = "*"
coverage = {extras = ["toml"], version = "*"}
black = "*"
isort = "*"
flake8 = "*"
autopep8 = "^2.3.2"

[tool.poetry.scripts]
controller-engine = "cuemsengine.scripts.controller_engine:main"
node-engine = "cuemsengine.scripts.node_engine:main"
mock-audioplayer = "cuemsengine.scripts.mock_audioplayer:main"
mock-jack-volume = "cuemsengine.scripts.mock_jack_volume:main"
mock-dmxplayer = "cuemsengine.scripts.mock_dmxplayer:main"
mock-videocomposer = "cuemsengine.scripts.mock_videocomposer:main"

[[tool.poetry.packages]]
include = "cuemsengine"
from = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "cuems: marks tests as using CUEMS engines (automatic cleanup)",
]
# Ensure proper cleanup on keyboard interrupt
junit_duration_report = "call"
filterwarnings = ["ignore::pytest.PytestUnhandledThreadExceptionWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
